# 2026_Geodesy_TSC

notebooks/Day3/: Compliant_wedge_model_demo.ipynb  Layered_model_demo.ipynb  README_GeoSlip2D.md  Slip_inversion_activities.ipynb  Viscoelastic_cycle_demo.ipynb  pyproject.toml
notebooks/Day3/data/: gnss_interseismic_velocities_NAfixed.txt
notebooks/Day3/geoslip2d/: data_format_helpers.py  inversion.py
