[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoslip2d"
version = "0.1.0"
description = "2-D profile Green's functions and slip inversions for subduction-interface models"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "GeoSlip2D developers"}]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=7", "jupyter", "ipykernel"]

[tool.setuptools.packages.find]
where = ["src"]
